[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/offline_boot_modal.gd" id="1_script"]

[node name="OfflineBootModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="BootLog" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "> INITIALIZING...
> LOGISTICS SYNC..."

[node name="YieldTitle" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "SYSTEM RESTORE COMPLETE"
horizontal_alignment = 1

[node name="LootGrid" type="GridContainer" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 5
columns = 2

[node name="Footer" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 9
text = "ALL SYSTEMS NOMINAL // WELCOME BACK COMMANDER"
horizontal_alignment = 1

[node name="ContinueBtn" type="Button" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "BRIDGE CONTROL"
